fixing header on mobile and gallery layout on tablet

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,3 +10,10 @@
 .linkOnGreen:hover {
     color: #666666;
 }
+
+@media (max-width: 575px) {
+    .greenScheme  .container {
+        padding-left: 18px;
+        padding-right: 18px;
+    }
+}
